--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.6",
     "browserify": "^13.3.0",
+    "flickity": "^2.0.10",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
+    "imagesloaded": "^4.1.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-flickity-component": "^1.1.3",
+    "react-flickity-component-updated": "0.0.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
